# tree-sitter-rql

./: CMakeLists.txt  Cargo.toml  LICENSE.txt  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  on-release-main.yml
bindings/c/: tree-sitter-rql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rql/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRQL/: rql.h
bindings/swift/TreeSitterRQLTests/: TreeSitterRQLTests.swift
examples/: invalid_syntax.rql  test_parsing.rql
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
