[package]
name = "tree-sitter-rql"
description = "Rql grammar for tree-sitter"
version = "0.1.0"
authors = ["SoftwareOne AG"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rql"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/softwareone-platform/tree-sitter-rql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE.txt",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
