[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-rql"
description = "RQL grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "rql"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
authors = [
  { name = "SoftwareOne AG" },
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9,<4"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/softwareone-platform/tree-sitter-rql"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
